.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Recruitment_Costs__c.object
<CustomObject>
    <description>Recruitment
Costs of hiring</description>
    <fields>
        <fullName>xcdhcm__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Vacancy_L__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>xcdhcm__Vacancy__c</referenceTo>
        <relationshipLabel>Recruitment Costs</relationshipLabel>
        <relationshipName>Recruitment_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Recruitment Cost</label>
    <nameField>
        <label>Cost item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Costs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>